package org.rutebanken.sobek.model.vehicle;

public class CompositeFrame extends Composite_VersionFrameStructure {

}
