package org.rutebanken.sobek.model.vehicle;

import jakarta.persistence.Entity;

@Entity
public class PassengerCapacity extends PassengerCapacityStructure {

}
