package org.rutebanken.sobek.model.vehicle;

import jakarta.persistence.Entity;

@Entity
public class VehicleEquipmentProfile extends VehicleEquipmentProfile_VersionStructure {

}
